# Spotato

./: .gitignore  pyproject.toml  run.py
app/: __init__.py
app/client/: main.py
app/client/ui/: __init__.py  res.qrc  res_rc.py  ui_main.py  ui_main.ui  ui_main_ui.py  window.py
app/core/: __init__.py
app/core/audio/: audio_control.py
app/core/metadata/: reader.py
app/core/playlist/: browser.py
app/core/utils/: helpers.py
spotato.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
