[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotato"
version = "0.1.0"
description = "Advanced Audio Player"
authors = [{name = "Maxim_101B", email = "maximmelnik23328@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "PySide6>=6.4.0",
    "mutagen>=1.46.0",  # Для работы с метаданными аудио
    "python-dotenv>=0.19.0"
]

[tool.setuptools.packages]
find = {}

[project.scripts]
spotato = "app.client.main:main"